cluster/apps/semaphore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ingress
  namespace: semaphore-ns
spec:
  rules:
    - host: "semaphore.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore  # The name of the service
                port:
                  number: 3000  # Service Portnumber
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: semaphore-pgdb-ingress
  namespace: semaphore-ns
spec:
  routes:
    - match: HostSNI(`*`)
      services:
        - name: semaphore-pgdb
          port: 5432
